fix: theme toggle override for system dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,16 +7,9 @@
   --foreground: #171717;
 }
 
-.dark {
+[class='dark'] {
   --background: #212121;
   --foreground: #ededed;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #212121;
-    --foreground: #ededed;
-  }
 }
 
 body {
